--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 <div class="section-2">
         <div class="video-container-text">
             <p class="body-section-discover">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non quod et dolore ea quis minima illum, fugit animi ab obcaecati ullam eos impedit eaque, quia culpa quas quaerat consectetur natus.
-        </p></div>
+                Rest is not idleness, and to lie sometimes on the grass under trees on a summer's day, listening to the murmur of the water, or watching the clouds float across the sky, is by no means a waste of time.        
+            </p></div>
         <div class="video-container">
         <video muted loop autoplay>
             <source src="./assets/4973185-hd_1920_1080_30fps.mp4" type="video/mp4">
@@ -46,8 +46,8 @@
 <div class="section-3">
     <div class="video-container-text">
         <p class="body-section-discover">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non quod et dolore ea quis minima illum, fugit animi ab obcaecati ullam eos impedit eaque, quia culpa quas quaerat consectetur natus.
-    </p></div>
+            Every morning was a cheerful invitation to make my life of equal simplicity, and I may say innocence, with Nature herself.
+            </p></div>
     <div class="video-container-2">
     <video muted loop autoplay>
         <source src="./assets/3755381-uhd_4096_2160_25fps.mp4" type="video/mp4">
@@ -57,8 +57,8 @@
 <div class="section-4">
     <div class="video-container-text">
         <p class="body-section-discover">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non quod et dolore ea quis minima illum, fugit animi ab obcaecati ullam eos impedit eaque, quia culpa quas quaerat consectetur natus.
-    </p></div>
+            Fresh air is as good for the mind as for the body. Nature always seems trying to talk to us as if she had some great secret to tell. And so she has.
+            </p></div>
     <div class="video-container-3">
     <video muted loop autoplay>
         <source src="./assets/6583403-uhd_4096_2160_25fps.mp4" type="video/mp4">
